// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toaster - Snapshots > matches snapshot for Toaster with multiple toasts 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            First Toast
          </div>
          <div
            class="text-sm opacity-90"
          >
            First description
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        />
      </div>
    </li>
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            Second Toast
          </div>
          <div
            class="text-sm opacity-90"
          >
            Second description
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        />
      </div>
    </li>
  </ol>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with single toast 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            Test Toast
          </div>
          <div
            class="text-sm opacity-90"
          >
            This is a test toast message
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        />
      </div>
    </li>
  </ol>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with title-only toast 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            Simple Toast
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        />
      </div>
    </li>
  </ol>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with toast action 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            Toast with Action
          </div>
          <div
            class="text-sm opacity-90"
          >
            This toast has an action button
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        >
          <button>
            Undo
          </button>
        </div>
      </div>
    </li>
  </ol>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with toast with action 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      aria-atomic="true"
      aria-live="off"
      class="group pointer-events-auto relative w-full space-x-4 overflow-hidden shadow-lg transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full flex items-center justify-between gap-4 p-6 rounded-lg bg-black-900 border border-brand/16 text-white"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      role="status"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between gap-4 w-full"
      >
        <div
          class="flex flex-col gap-1 w-full"
        >
          <div
            class="text-popover-foreground text-base font-bold leading-6"
          >
            Toast with Action
          </div>
          <div
            class="text-sm opacity-90"
          >
            This toast has an action button
          </div>
        </div>
        <div
          class="flex items-center justify-between gap-4"
        >
          <button
            data-testid="custom-action"
          >
            Undo
          </button>
        </div>
      </div>
    </li>
  </ol>
  <span
    aria-hidden="true"
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for empty Toaster 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style="pointer-events: none;"
  tabindex="-1"
>
  <ol
    class="fixed bottom-0 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  />
</div>
`;
